--- a/Power Up Prototype Files/Assembly-CSharp.csproj
+++ b/Power Up Prototype Files/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\DeleteSelf.cs" />
+    <Compile Include="Assets\Scripts\ThingGoBang.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
