--- a/Power Up Prototype Files/Assembly-CSharp.csproj
+++ b/Power Up Prototype Files/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\ThingGoBang.cs" />
     <Compile Include="Assets\Scripts\DeleteSelf.cs" />
+    <Compile Include="Assets\Scripts\Shrapnel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
